--- a/inband_vWire_interzone/.meta-cnc.yaml
+++ b/inband_vWire_interzone/.meta-cnc.yaml
@@ -27,10 +27,10 @@ labels:
 # type_hint defines the form field used by panhandler
 # type_hints can be text, ip_address, or dropdown
 variables:
-  - name: mgmt_ip
-    description: management ip address
-    default: 192.168.1.225
-    type_hint: ip_address
+#  - name: mgmt_ip
+#    description: management ip address
+#    default: 192.168.1.225
+#    type_hint: ip_address
   - name: zone_name
     description: management zone name
     default: in-band mgmt
