--- a/inband_vWire_interzone/.meta-cnc.yaml
+++ b/inband_vWire_interzone/.meta-cnc.yaml
@@ -54,6 +54,9 @@ snippets:
   - name: zone
     xpath: /config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/zone
     file: zone.xml
+  - name: rules
+    xpath: /config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/rulebase/security
+    file: rules.xml
 
 
 # ---------------------------------------------------------------------
