--- a/DNS-proxy/.meta-cnc.yaml
+++ b/DNS-proxy/.meta-cnc.yaml
@@ -4,7 +4,7 @@
 name: DNS-Proxy_setup
 # label used for menu selection
 label: DNS-Proxy configuration skillet
-description: provisions NGFW DNS-Proxy: interface ethernet1/1
+description: provisions NGFW DNS-Proxy
 
 # type of device configuration
 # common types are panorama, panos, and template
@@ -16,7 +16,7 @@ extends:
 # grouping of like snippets for dynamic menu creation in panhandler
 labels:
   collection:
-    - NGFW setup
+    - DNS-proxy setup
 
 # ---------------------------------------------------------------------
 # end of preamble section
