--- a/DNS-proxy/.meta-cnc.yaml
+++ b/DNS-proxy/.meta-cnc.yaml
@@ -16,7 +16,7 @@ extends:
 # grouping of like snippets for dynamic menu creation in panhandler
 labels:
   collection:
-    - Example Skillets
+    - PA-NGFW-setup
 
 # ---------------------------------------------------------------------
 # end of preamble section
