--- a/DNS-proxy/.meta-cnc.yaml
+++ b/DNS-proxy/.meta-cnc.yaml
@@ -41,11 +41,11 @@ variables:
 #        - key: no
 #          value: no
   - name: primary_dns
-      description: primary DNS server
+      description: primary dns server
       default: 1.1.1.1
       type_hint: ip_address
   - name: secondary_dns
-      description: secondary DNS server
+      description: secondary dns server
       default: 8.8.8.8
       type_hint: ip_address
   - name: tcp_queries
