--- a/dns_proxy/.meta-cnc.yaml
+++ b/dns_proxy/.meta-cnc.yaml
@@ -50,6 +50,7 @@ variables:
 snippets:
   - name: dns_proxy
     xpath: /config/devices/entry[@name='localhost.localdomain']/network/dns-proxy
+    file: dns_proxy.xml
 
 
 # ---------------------------------------------------------------------
